--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "devDependencies": {
     "@cypress-audit/lighthouse": "^1.4.2",
     "@cypress-audit/pa11y": "^1.4.2",
-    "cypress": "^13.3.1",
+    "cypress": "^13.3.1"
+  },
+  "dependencies": {
     "cypress-audit": "^1.1.0"
   }
 }
